fixed width of media queries

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,12 +82,23 @@ h1, p{
 
 
 /* Vertical screen media queries */
-@media only screen and (min-height: 1000px){
+
+@media only screen and (min-height: 900px){
   .homePageImageContainer {
-    height: 20vh;
+    height: 21vh;
     margin-bottom: 27px;
     display: inline-flex;
-    width: 97%;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1000px){
+  .homePageImageContainer {
+    height: 19vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
     justify-content: space-around;
   }
 }
@@ -97,7 +108,7 @@ h1, p{
     height: 17vh;
     margin-bottom: 27px;
     display: inline-flex;
-    width: 97%;
+    width: 100%;
     justify-content: space-around;
   }
 }
@@ -107,7 +118,7 @@ h1, p{
     height: 16vh;
     margin-bottom: 27px;
     display: inline-flex;
-    width: 97%;
+    width: 100%;
     justify-content: space-around;
   }
 }
@@ -117,7 +128,7 @@ h1, p{
     height: 15vh;
     margin-bottom: 27px;
     display: inline-flex;
-    width: 97%;
+    width: 100%;
     justify-content: space-around;
   }
 }
@@ -127,7 +138,7 @@ h1, p{
     height: 14vh;
     margin-bottom: 27px;
     display: inline-flex;
-    width: 97%;
+    width: 100%;
     justify-content: space-around;
   }
 }
@@ -137,7 +148,7 @@ h1, p{
     height: 13vh;
     margin-bottom: 27px;
     display: inline-flex;
-    width: 97%;
+    width: 100%;
     justify-content: space-around;
   }
 }
@@ -147,7 +158,7 @@ h1, p{
     height: 12vh;
     margin-bottom: 27px;
     display: inline-flex;
-    width: 97%;
+    width: 100%;
     justify-content: space-around;
   }
 }
