Another media query

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -143,7 +143,7 @@ h1, p{
   }
 }
 
-@media only screen and (min-height: 1600px){
+@media only screen and (min-height: 1500px){
   .homePageImageContainer {
     height: 13vh;
     margin-bottom: 27px;
@@ -153,9 +153,19 @@ h1, p{
   }
 }
 
-@media only screen and (min-height: 1700px){
+@media only screen and (min-height: 1600px){
   .homePageImageContainer {
     height: 12vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1700px){
+  .homePageImageContainer {
+    height: 11vh;
     margin-bottom: 27px;
     display: inline-flex;
     width: 100%;
