optimized app speed for deskstop

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,138 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+
+/* BOOTSTRAP CSS EXTRACTED */
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace
+}
+
+*,::after,::before {
+  box-sizing: border-box
+}
+
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin-top: 0;
+  margin-bottom: .5rem
+}
+
+b,strong {
+  font-weight: bolder
+}
+
+a {
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent
+}
+
+img {
+  vertical-align: middle;
+  border-style: none
+}
+
+button {
+  border-radius: 0
+}
+
+button,input,optgroup,select,textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit
+}
+
+button,input {
+  overflow: visible
+}
+
+button,select {
+  text-transform: none
+}
+
+[type=button],[type=reset],[type=submit],button {
+  -webkit-appearance: button
+}
+
+[type=button]:not(:disabled),[type=reset]:not(:disabled),[type=submit]:not(:disabled),button:not(:disabled) {
+  cursor: pointer
+}
+
+.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6 {
+  margin-bottom: .5rem;
+  font-weight: 500;
+  line-height: 1.2
+}
+
+.h1,h1 {
+  font-size: 2.5rem
+}
+
+.form-control::-webkit-input-placeholder {
+  color: #6c757d;
+  opacity: 1
+}
+
+.form-group {
+  margin-bottom: 1rem
+}
+
+.invalid-feedback {
+  display: none;
+  width: 100%;
+  margin-top: .25rem;
+  font-size: 80%;
+  color: #dc3545
+}
+
+
+
+
+
+
+
 
 
 /* This also helps for the loading screen to load */
@@ -70,7 +204,7 @@ h1, p{
 }
 
 .homePageImageContainer{
-  height: 21vh;
+  height: 29vh;
   margin-bottom: 15px;
   display: inline-flex;
   width: 100%;
@@ -79,34 +213,100 @@ h1, p{
 
 
 
-/* ----------- Non-Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
-    .homePageImageContainer {
-      height: 17vh;
-      margin-bottom: 27px;
-      display: inline-flex;
-      width: 100%;
-      justify-content: space-around;
-    }
+
+
+/* Vertical screen media queries */
+
+@media only screen and (min-height: 900px){
+  .homePageImageContainer {
+    height: 21vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
 }
 
-/* ----------- Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) { 
-    .homePageImageContainer {
-      height: 20vh;
-      margin-bottom: 27px;
-      display: inline-flex;
-      width: 100%;
-      justify-content: space-around;
-    }
+@media only screen and (min-height: 1000px){
+  .homePageImageContainer {
+    height: 19vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
 }
+
+@media only screen and (min-height: 1100px){
+  .homePageImageContainer {
+    height: 17vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1200px){
+  .homePageImageContainer {
+    height: 16vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1300px){
+  .homePageImageContainer {
+    height: 15vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1400px){
+  .homePageImageContainer {
+    height: 14vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1500px){
+  .homePageImageContainer {
+    height: 13vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1600px){
+  .homePageImageContainer {
+    height: 12vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (min-height: 1700px){
+  .homePageImageContainer {
+    height: 11vh;
+    margin-bottom: 27px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
 
 
 
