--- a/client/src/index.css
+++ b/client/src/index.css
@@ -138,7 +138,6 @@ button,select {
 /* This also helps for the loading screen to load */
 .App {
   text-align: center;
-  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -167,7 +166,7 @@ h1, p{
 }
 
 .link:hover {
-   color: #414141;
+   color: #E2C044;
    text-decoration: none;
 }
 
