--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,7 @@ html {
 }
 
 body {
+  background: linear-gradient(to top left, #823f5c, #016474) fixed;
   margin: 0;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 1rem;
