--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,27 +1,6 @@
 
 /* BOOTSTRAP CSS EXTRACTED */
 :root {
-  --blue: #007bff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --red: #dc3545;
-  --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #28a745;
-  --teal: #20c997;
-  --cyan: #17a2b8;
-  --white: #fff;
-  --gray: #6c757d;
-  --gray-dark: #343a40;
-  --primary: #007bff;
-  --secondary: #6c757d;
-  --success: #28a745;
-  --info: #17a2b8;
-  --warning: #ffc107;
-  --danger: #dc3545;
-  --light: #f8f9fa;
-  --dark: #343a40;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -43,15 +22,13 @@ html {
 }
 
 body {
-  background: linear-gradient(to top left, #823f5c, #016474) fixed;
+  background: linear-gradient(to top left, #09aa67, #00bdda) fixed;
   margin: 0;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
   text-align: left;
-  background-color: #fff
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -104,6 +81,11 @@ input.contentBarText.form-control.is-invalid{
   border-color: #FFFFFF
 }
 
+input.codeBarText.form-control.is-invalid{
+  border-color: #FFFFFF
+}
+
+
 [type=button],[type=reset],[type=submit],button {
   -webkit-appearance: button
 }
@@ -112,13 +94,13 @@ input.contentBarText.form-control.is-invalid{
   cursor: pointer
 }
 
-.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: 500;
   line-height: 1.2
 }
 
-.h1,h1 {
+h1 {
   font-size: 2.5rem
 }
 
@@ -136,13 +118,16 @@ input.contentBarText.form-control.is-invalid{
   width: 100%;
   margin-top: .25rem;
   font-size: 80%;
-  color: #dc3545
+  color: #dc3546
 }
 
 
-
-
-
+/* Text color of error message when wrong input is entered */
+p.MuiFormHelperText-root.Mui-error {
+  color: #dc3545;
+  font-weight: 700;
+  font-size: 13px;
+}
 
 
 
@@ -557,8 +542,8 @@ label{
 
 /* font weight of password requirements in signup page */
 span.multiline-block {
-  font-weight: 400;
-  color: #f4f1f27a;
+  font-weight: 700;
+  font-size: 12px;
 }
 
 label.MuiInputLabel-shrink {
@@ -721,6 +706,8 @@ input.codeBarText.form-control::placeholder{
 span.codeReqContainer{
   display: block;
   padding-block-start: 10px;
+  font-weight: 600;
+  font-size: 16px;
 }
 
 
@@ -735,7 +722,7 @@ span.reqContainer{
   padding-block-start: 10px;
 }
 
-/*  place password input requriments from every password into a block */
+/*  place password input requriments from every password into a block, delete after changing*/
 .requirements{
   display: block;
 }
@@ -938,12 +925,6 @@ span.reqContainer{
   background-color: #91A8C0;
 }
 
-
-
-
-
-
-
 /* Back buttons color*/
 .Account_button_Settings, 
 .Analytics_button_Settings, 
@@ -982,7 +963,7 @@ span.reqContainer{
 
 
 
-/*Back Buttons hover red*/
+/*Back Buttons hover mustard*/
 .Back_button_Settings:hover,
 .Back_button_ForgotPassword:hover,
 .Back_button_Settings:hover,
