--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,11 +122,16 @@ h1 {
 }
 
 
-/* Text color of error message when wrong input is entered */
+/* Text color of error message when wrong input is entered in signup page*/
 p.MuiFormHelperText-root.Mui-error {
-  color: #dc3545;
-  font-weight: 700;
+  color: #fff;
+  font-weight: 500;
   font-size: 13px;
+  background-color: rgba(220,53,69,.9);
+  padding: 0.25rem 0.5rem;
+  margin-top: 0.3rem;
+  border-radius: 0.25rem;
+  width: fit-content;
 }
 
 
@@ -327,12 +332,12 @@ p.MuiFormHelperText-root{
   justify-content: center;
   width: 100%;
   height: 100%;
-
+  margin-top: 0.3rem;
 }
 
 .forgotpasswordContainer{
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 22px;
+  margin-bottom: 27px;
 }
 
 .captchaContainer{
@@ -370,7 +375,7 @@ p.MuiFormHelperText-root{
 .contentBar{
   margin: 0 auto;
   width: 300px;
-  padding-bottom: 15px;
+  padding-bottom: 13px;
 }
 
 /*  Username icons in home page */
@@ -525,7 +530,7 @@ label{
 }
 
 .signUp_button_two_Container {
-  padding-top: 15px;
+  padding-top: 22px;
   padding-bottom: 35px;
 }
 
@@ -630,8 +635,6 @@ div.MuiSelect-select.MuiSelect-select {
   font-size: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 /* Button in Forgot Password Page */
@@ -650,7 +653,11 @@ div.MuiSelect-select.MuiSelect-select {
   background-color: #E2C044;
 }
 
-
+.contentBarPassword{
+  margin: 0 auto;
+  width: 315px;
+  padding-bottom: 13px;
+}
 
 
 
@@ -721,6 +728,9 @@ span.reqContainer{
 /*  place password input requriments into a block*/
 .requirements{
   display: block;
+  font-weight: 700;
+  font-size: 13px;
+  color: #f4f1f27a;
 }
 
 div.input-group{
