fixed final error for resetPassword and captcha code

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -338,7 +338,7 @@ p.MuiFormHelperText-root{
   margin-top: 0.3rem;
 }
 
-.forgotpasswordContainer{
+.forgotPasswordContainer{
   margin-top: 22px;
   margin-bottom: 27px;
 }
@@ -354,7 +354,7 @@ p.MuiFormHelperText-root{
   margin-top: 25px;
 }
 
-.transitionCapchaContainer{
+.transitionCaptchaContainer{
   margin-top: 100px;
   margin-bottom: 100px;
 }
