--- a/client/src/index.css
+++ b/client/src/index.css
@@ -191,7 +191,42 @@ p.MuiFormHelperText-root{
   color: #f4f1f27a;
 }
 
- /* Containers in home page*/
+
+.transparent {
+  background-color: transparent;
+}
+
+.no-border{
+  border: none;
+}
+
+/* HOME PAGE FOR GUESTS */
+
+.Home_Menu_Container{
+  background-color: #dc3546;
+  display: flex;
+  align-items: center;
+  width: 100vw;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1rem;
+}
+
+.Home_Menu_Item_Text{
+  color: #000000;
+  background-color: #007bff;
+  width: 100%;
+  padding: 10px;
+  font-size: x-large;
+  font-weight: 650;
+}
+
+
+
+
+ /* Containers in USER/LOGIN e*/
 
 .homePageContainer{
   display: inline-flex;
